--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "eslint": "^7.19.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "prettier": "^2.2.1",
     "mocha": "^8.2.1",
-    "nyc": "^15.1.0"
+    "nyc": "^15.1.0",
+    "prettier": "^2.2.1",
+    "redis": "^3.0.2"
   },
   "dependencies": {
     "busboy": "^0.3.1",
