--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
   },
   "dependencies": {
     "busboy": "^0.3.1",
+    "mariadb": "^2.5.2",
     "mime-types": "^2.1.28",
     "minio": "^7.0.18",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
     "nats": "^1.4.12",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "sequelize": "^6.5.0"
   }
 }
